Fix spacing/line wrapping on mobile.

--- a/src/app.css
+++ b/src/app.css
@@ -188,6 +188,8 @@ html {
 }
 
 .link {
+  overflow-wrap: break-word;
+
   &:hover {
     color: var(--hover-color);
     text-decoration: underline;
